Update Styling for the App

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   color: #373b64;
-  height: 100%;
+  /* height: 100%; */
 }
 
 @font-face {
