--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,7 +1,7 @@
 /** Mobile first development **/
 
 .container {
-  margin-bottom: 14rem /* 224px */;
+  margin-bottom: 1rem /* 16px */;
 }
 
 .main {
@@ -36,6 +36,10 @@
   padding-bottom: 2rem;
   margin-top: 2rem;
   color: var(--text-white-100);
+}
+
+.sectionWrapper {
+  margin-top: 5rem;
 }
 
 /** Breakpoints:
